--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "version": "0.0.2",
   "dependencies": {
     "angular": "~1.5.8",
-    "lodash": "~4.0.0",
-    "zerv-ng-sync": "z-open/zerv-ng-sync#1.2.3"
+    "lodash": "4.17.15",
+    "zerv-ng-sync": "z-open/zerv-ng-sync#1.2.9"
   },
   "devDependencies": {
     "angular-mocks": "~1.5.0",
